# blockcertify

./: README.md  package.json  pnpm-lock.yaml
anchor/: Anchor.toml
anchor/programs/blockcertify/: Cargo.toml
anchor/programs/blockcertify/src/: lib.rs
anchor/src/: blockcertify-exports.ts  index.ts
anchor/tests/: blockcertify.spec.ts
src/app/: layout.tsx
src/app/blockcertify/: page.tsx
src/components/blockcertify/: blockcertify-data-access.tsx  blockcertify-feature.tsx  blockcertify-ui.tsx
src/components/dashboard/: dashboard-feature.tsx
src/components/ui/: ui-layout.tsx
